@@ -42,6 +42,7 @@
 - https://github.com/eclipse-sirius/sirius-web/issues/3557[#3550] [app] Add ProjectSettings tab extension point
 - https://github.com/eclipse-sirius/sirius-web/issues/3557[#3563] [app] Improve NavigationBar extensibility
 - https://github.com/eclipse-sirius/sirius-web/issues/3557[#3587] [app] Add CreateProjectCard extension point
+- https://github.com/eclipse-sirius/sirius-web/issues/3557[#3591] [app] Add EditProject subtitle extension point
 
 === Improvements
 
